--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 <body>
     <div id="container" class="background" data-src="https://source.unsplash.com/category/nature/">
 		<div id="overlay" class="target"></div>
-        <div id="verse" class="target">
+        <div id="verse">
             Loading...
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="http://cdn.rawgit.com/kennethcachia/Background-Check/master/background-check.min.js"></script>
+    <script src="js/jquery-2.2.0.min.js"></script>
+    <script src="js/background-check.min.js"></script>
     <script>
     function convertImageToDataURI(img) {
         var canvas = document.createElement('canvas');
@@ -165,6 +165,12 @@
 			images: background
 		  });
 
+		  if($('#overlay').hasClass('background--dark')){
+			  $('#verse').addClass('background--dark');
+		  } else {
+			  $('#verse').addClass('background--light');
+		  }
+		  
         };
 
         img.src = dataSrc;
